--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@okta/okta-auth-js": "^4.8.0",
+    "@okta/okta-react": "^5.0.0",
+    "@sentry/react": "^6.2.5",
+    "@sentry/tracing": "^6.2.5",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
@@ -10,11 +14,45 @@
     "@types/node": "^12.20.6",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "history": "^5.0.0",
+    "http-service": "^1.1.3",
+    "node-sass": "^5.0.0",
+    "react-async": "^10.0.1",
+    "react-router-with-props": "^1.0.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.2.3",
     "web-vitals": "^1.1.1"
+  },
+  "devDependencies": {
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "@sentry/webpack-plugin": "^1.15.0",
+    "@testing-library/jest-dom": "5.11.9",
+    "@testing-library/react": "11.2.5",
+    "@testing-library/user-event": "12.8.1",
+    "@types/jest": "26.0.20",
+    "@types/luxon": "1.26.2",
+    "@types/react": "17.0.3",
+    "@types/react-dom": "17.0.1",
+    "@types/react-router-dom": "5.1.7",
+    "axios": "0.21.1",
+    "cross-env": "7.0.3",
+    "husky": "4.3.8",
+    "i18next": "19.9.1",
+    "i18next-browser-languagedetector": "6.0.1",
+    "lint-staged": "10.5.4",
+    "luxon": "1.26.0",
+    "mobx": "6.1.8",
+    "mobx-react-lite": "3.2.0",
+    "mobx-state-tree": "5.0.1",
+    "mst-persist": "0.1.3",
+    "prettier": "2.2.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-i18next": "11.8.9",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.3",
+    "typescript": "4.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
